@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.2.17-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-02-17 12:52:27, took 00:10:07, with 60 workers, on 534 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2024-02-17 13:20:19, took 00:10:23, with 60 workers, on 534 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
