@@ -15712,3 +15712,6 @@ qc pass: dhcp with excluded address
 ---------------------------------- 2024-02-17 12:26:42 24.2.17
 no qc pass: dhcp with excluded address
 failed: dhcp with excluded address
+---------------------------------- 2024-02-17 12:57:04 24.2.17
+no failed: dhcp with excluded address
+qc pass: dhcp with excluded address
